# go-rust-benchmark

./: .gitignore  cluster.yaml  create_table.sql  docker-compose.yaml  load_test.js  runner.sh
go_api/: Dockerfile  go.mod  main.go
go_api/k8s/: deployment.yaml
load_test/: load_test_go.js  load_test_node.js  load_test_rust.js
node_api/: .env  Dockerfile  main.js  package-lock.json  package.json
rust_api/: .env  .env.example  Cargo.toml  Dockerfile
rust_api/k8s/: deployment.yaml
rust_api/src/: main.rs
