[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7" }
rust_decimal = { version = "1.32", features = ["db-tokio-postgres"] }
rust_decimal_macros = "1.32"
postgres-types = { version = "0.2", features = ["derive"] }
dotenv = "0.15"
